# ros2bag_extensions

./: .gitignore  README.md
ros2bag_extensions/: package.xml  setup.py
ros2bag_extensions/ros2bag_extensions/verb/: __init__.py  filter.py  merge.py  slice.py
ros2bag_extensions/test/: test_verb.py
rosbag2_py_wrapper/: CMakeLists.txt  NOTICE  package.xml
rosbag2_py_wrapper/rosbag2_py_wrapper/: __init__.py
rosbag2_py_wrapper/src/rosbag2_py_wrapper/: _writer.cpp  pybind11.hpp
