<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2bag_extensions</name>
  <version>0.1.0</version>
  <description>
    Extension commands for rosbag in ROS 2
  </description>
  <maintainer email="keisuke.shima@tier4.jp">Keisuke Shima</maintainer>
  <license>Apache License 2.0</license>

  <depend>ros2bag</depend>
  <depend>rosbag2_py</depend>
  <depend>rosbag2_py_wrapper</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
