<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag2_py_wrapper</name>
  <version>0.9.2</version>
  <description>Wrapper for Python API for rosbag2</description>
  <maintainer email="hiroki.ota@tier4.jp">Hiroki Ota</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>pybind11_vendor</depend>
  <depend>pybind11</depend>
  <depend>rosbag2_cpp</depend>

  <exec_depend>rpyutils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rcl_interfaces</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>rosbag2_storage_default_plugins</test_depend>
  <test_depend>rosidl_runtime_py</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
